--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,18 @@
 .col{
     width: 50px;
     height: 50px;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: blue;
+    /* background-color: rgba(0, 0, 0, 0.1); */
     margin: 5px;
+}
+
+.index-cell{
+
+    width: 50px;
+    height: 50px;
+    /* background-color: rgba(255, 0, 0, 0.1); */
+    margin: 5px;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
