--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 .out-container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
-.container{
-    margin-top: 100px;
+#container{
+    /* margin-top: 100px; */
     display: flex;
     /* width: 600px; */
     /* height: 600px; */
@@ -14,21 +16,83 @@
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-.col{
+.col-null{
     width: 50px;
     height: 50px;
-    background-color: blue;
-    /* background-color: rgba(0, 0, 0, 0.1); */
+    background-color: rgba(0, 0, 0, 0.1);
     margin: 5px;
 }
 
-.index-cell{
-
+.col{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 50px;
     height: 50px;
-    /* background-color: rgba(255, 0, 0, 0.1); */
+    background-color: rgba(0, 0, 255, 0.3);
     margin: 5px;
     font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    color: #fff;
+}
+
+.col-vertical{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.1);
+    margin: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+}
+
+.col-horizontal{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    width: 50px;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.1);
+    margin: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+}
+
+/* .blue{
+    background-color: blue;
+} */
+
+/* .index-cell{
+    width: 50px;
+    height: 50px;
+    background-color: rgba(255, 0, 0, 0.1);
+    margin: 5px;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+} */
+
+p{
+    font-size: 80px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 50px;
+}
+
+#expression{
+    display: flex;
+    /* background-color: rgba(255, 0, 0, 0.1); */
+    align-items: center;
+}
+
+input{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100px;
+    height: 100px;
+    font-size: 80px;
+    border: none;
 }
