--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@ span{
     font-family: sans-serif;
 }
 
+#result{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    margin: 30px;
+}
+
 #container{
     /* margin-top: 100px; */
     display: flex;
@@ -95,7 +101,8 @@ span{
 p{
     font-size: 80px;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 50px;
+    margin: 0;
+    margin-bottom: 0;
 }
 
 #expression{
