--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ span{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
     margin: 30px;
+    height: 60px;
 }
 
 #container{
