--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+    background: url(/img/img-1.jpg);
+}
+
 .out-container{
     display: flex;
     flex-direction: column;
@@ -8,6 +12,7 @@
 span{
     font-size: 30px;
     font-family: sans-serif;
+    margin: 15px;
 }
 
 #result{
@@ -118,4 +123,12 @@ input{
     height: 100px;
     font-size: 80px;
     border: none;
+    background-color: transparent;
+    /* border: none; */
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
